[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "nameLib_drooler"
version = "0.1.3"
authors = [
  { name="drooler", email="contact@drooler.tk" },
]
description = "A small example package"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://namelib.drooler.tk"
